2012-11-26  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/libgputils/gpprocessor.c, gputils/libgputils/gpprocessor.h,
    gputils/libgputils/gpcofflink.c, gputils/gpasm/directive.c:
    implemented feature request #62 - "BANKISEL with enhaced PIC series"
  * gputils/gpasm/testsuite/gpasm.project/listfiles/bankisel5.lst,
    gputils/gpasm/testsuite/gpasm.project/asmfiles/bankisel5.asm,
    gputils/gpasm/testsuite/gpasm.project/hexfiles/bankisel5.hex:
    added regression test for feature request #62 - "BANKISEL with enhaced PIC series"

2012-11-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p18f6390.inc: Repaired wrong address of RCREG, H'0FA0' --> H'0FAE'.

2012-11-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p18f63j11.inc: Repaired wrong address of RCREG, H'0FD0' --> H'0FAE'.

2012-11-15  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpreadobj.c:
    fixed bug #258 - [GPLINK] error: multiple sections using address 0xYYYY

2012-11-04  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/evaluate.c, gpasm/directive.c, gpasm/gperror.c:
    fixed bug #186 - unresolvable expressions regarding externals fail silently
  * configure.ac, configure, doc/gputils.lyx: version changed to 0.15.0

2012-11-03  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/lst.c, gpasm/lst.h, gpasm/gperror.c,
    gpasm/gpasm.h.in: implemented LIST directive c=xxx option
  * gpasm/scan.l, gplink/scan.l: skip CR followed by LF
  * gpasm/ppscan.l: don't preprocess #v in comments

2012-11-02  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c:
    db, dw: don't generate code if not in appropriate section;
    error GPE_ILLEGAL_DIR prints the illegal directive
  * gpasm/coff.h, gpasm/scan.l: cosmetic changes
  * gpasm/gpasm.c:
    initialize new_sec_flags to none on second pass for relative mode
  * gpasm/gperror.c, gpasm/gperror.h: introduced GPE_LABEL_IN_SECTION;